--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1")
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.1")
     implementation 'androidx.core:core-ktx:1.6.0'
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
 
     // LIFECYCLE LIBRARY ---------------------------------------------------------------------------
